feat: add email authentication for social accounts and create user profile on signup

--- a/templates/about.html
+++ b/templates/about.html
@@ -61,7 +61,7 @@
                   <i class='bx bxl-reddit text-4xl'></i>
                 </a>
             </div>
-            <div data-aos="zoom-in-up" class="w-[98%] rounded p-5 mt-11 ml-3 text-green-600 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i>
+            <div data-aos="zoom-in-up" class="w-[98%] rounded p-5 mt-11 ml-3 text-green-600 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 hidden" style="background-color: rgba(0, 42, 42, .6);"><i>
               <p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
               <span class="text-5xl">Prizes</span></i>
               <table class="table-auto text-2xl border-collapse border border-green-600 mt-5">
@@ -120,9 +120,6 @@
               <p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
               <span class="text-5xl">Sponsors</span></i>
               <div class="flex place-content-center">
-                <a href="https://www.taskade.com/">
-                  <img src="/sponsors/logo_taskade_white.png" alt="taskade" class="max-h-20 mx-3">
-                </a>
                 <a href="https://gen.xyz/">
                   <img src="/sponsors/xyz-logo-white.svg" alt="gen.xyz" class="max-h-20 mx-3">
                 </a>
