--- a/templates/guidelines.html
+++ b/templates/guidelines.html
@@ -110,10 +110,10 @@
           <span class="material-symbols-outlined text-green-500">devices</span>
           Use a Chromium-based browser or Firefox for the best experience
         </p>
-        <p class="text-neutral-300 flex items-center gap-2">
+        <!-- <p class="text-neutral-300 flex items-center gap-2">
           <span class="material-symbols-outlined text-green-500">extension</span>
           Easter Eggs can be claimed through our Discord bot
-        </p>
+        </p> -->
       </div>
     </div>
 
