--- a/templates/base.html
+++ b/templates/base.html
@@ -361,21 +361,41 @@
       webpushr('attributes', { "username": "{{user.username}}" });
       {% endif %}
     </script>
-    <script type="text/javascript">
-      window.$crisp = [];
-      window.CRISP_WEBSITE_ID = "73cba040-9174-41dd-a9f8-77bbd9c90366";
-      (function () {
-        d = document;
-        s = d.createElement("script");
-        s.src = "https://client.crisp.chat/l.js";
-        s.async = 1;
-        d.getElementsByTagName("head")[0].appendChild(s);
-      })();
+    <script>
+      window.chatwootSettings = {"position":"right","type":"standard","launcherTitle":"Lead Confirmation"};
+      (function(d,t) {
+        var BASE_URL="https://chat.fossbu.co";
+        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=BASE_URL+"/packs/js/sdk.js";
+        g.defer = true;
+        g.async = true;
+        s.parentNode.insertBefore(g,s);
+        g.onload=function(){
+          window.chatwootSDK.run({
+            websiteToken: '27GNBdL4h2TbebVDB5TjpjTy',
+            baseUrl: BASE_URL
+          })
+        }
+      })(document,"script");
     </script>
     {% if user.is_authenticated %}
     <script type="text/javascript">
-      $crisp.push(["set", "user:nickname", ["{{user.username}}"]]);
-      $crisp.push(["set", "user:email", ["{{user.email}}"]]);
+      window.addEventListener("chatwoot:ready", function () {
+      window.$chatwoot.setUser("{{ user.username }}", {
+        email: "{{ user.email }}",
+        {% if user.profile.name %}
+        name: "{{ user.profile.name }}",
+        {% else %}
+        name: "{{ user.username }}",
+        {% endif %}
+        avatar_url: "{{ user.profile.avatar }}",
+        company: "{{ user.profile.current_level }}",
+      });
+      window.$chatwoot.setCustomAttributes({
+        current_level: "{{ user.profile.current_level }}",
+        testing: "okoko"
+      });
+      });
     </script>
     {% endif %}
     <script>
