fix: google button and hcaptcha

--- a/templates/components/google_onetap.html
+++ b/templates/components/google_onetap.html
@@ -1,7 +1,7 @@
 <script src="//accounts.google.com/gsi/client" async></script>
 <div id="g_id_onload"
     data-client_id="176912388003-058tnif1mif6nphv9qinc1jih3n964jv.apps.googleusercontent.com"
-    data-login_uri="{% url 'google_login_by_token' %}">
+    data-login_uri="https://redcrypt.fossbu.co{% url 'google_login_by_token' %}">
 </div>
 
 
