--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -15,11 +15,6 @@
     transform: translateY(0);
   }
 }
-
-  #id_hcaptcha {
-    margin: 1rem auto;
-    display: block;
-  }
   
 @keyframes slideUp {
   from {
@@ -204,7 +199,7 @@
                     id="signup_form">
                 {% csrf_token %}
                 <!-- Form Steps -->
-                <div class="flex-1 animate-slideUp p-6 min-h-[450px]">
+                <div class="flex-1 animate-slideUp p-6 pb-0">
                   <!-- Step 1: Email -->
                   <div data-step="1"
                        data-active="true"
@@ -244,7 +239,6 @@
                         <span class="mx-4 flex-shrink text-neutral-400 text-sm">OR</span>
                         <div class="flex-grow border-t border-neutral-700"></div>
                       </div>
-                      <div class="flex items-center justify-center w-full">{% include "components/google_onetap.html" %}</div>
                     </div>
                   </div>
                   <!-- Step 2: Username & Password -->
@@ -361,7 +355,7 @@
                                class="w-full bg-neutral-900/70 shadow-inset-white backdrop-blur-sm text-gray-100 rounded-xl py-3 px-4 transition-all duration-300 hover:ring hover:ring-green-500 focus:ring focus:ring-green-500 focus:outline-none">
                       </div>
                       <div class="flex justify-center mt-4">
-                        <div class="h-captcha" data-sitekey="{{ HCAPTCHA_SITEKEY }}">{{ form.hcaptcha }}</div>
+                        <div>{{ form.hcaptcha }}</div>
                       </div>
                     </div>
                     <!-- Step Indicator -->
@@ -385,6 +379,9 @@
                     </div>
                   </div>
                 </div>
+
+              </form>
+                      <div class="flex items-center justify-center w-full mb-6">{% include "components/google_onetap.html" %}</div>
                 <div class="px-6">
                   <p class="text-neutral-400 text-xs pb-6 text-center">
                     By signing up, you agree to Re-Dcrypt's
@@ -394,7 +391,6 @@
                        class="text-green-500 hover:underline">Privacy Policy</a>
                   </p>
                 </div>
-              </form>
             </div>
           </div>
         </div>
