--- a/templates/account/email/email_confirmation_message.html
+++ b/templates/account/email/email_confirmation_message.html
@@ -1,50 +1,21 @@
-{% extends "account/email/base_message.html" %} {% load account %} {% load i18n
-%} {% block content %}{% user_display user as user_display %}You're receiving
-this e-mail because user {{ user_display }} has given your e-mail address to
-register an account on {{ site_domain }}.
-<br />
+{% extends "account/email/base_message.html" %}
+{% load account %}
+{% load i18n %}
 
-<div align="center">
-  <a href="{{ activate_url }}">
-    <div
-      style="
-        text-decoration: none;
-        display: inline-block;
-        color: #000000;
-        background-color: #08b74f;
-        border-radius: 4px;
-        width: auto;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
-        text-align: center;
-        mso-border-alt: none;
-        word-break: keep-all;
-      "
-    >
-      <span
-        style="
-          padding-left: 20px;
-          padding-right: 20px;
-          font-size: 16px;
-          display: inline-block;
-          letter-spacing: normal;
-        "
-        ><span
-          style="
-            font-size: 16px;
-            line-height: 2;
-            word-break: break-word;
-            mso-line-height-alt: 32px;
-          "
-          >Activate Email</span
-        ></span
-      >
-    </div>
-  </a>
+{% block content %}
+{% user_display user as user_display %}
+<h2 style="color: #08b74f; margin-bottom: 20px;">Verify Your Email</h2>
+
+<p style="margin-bottom: 20px;">
+    You're receiving this email because {{ user_display }} has registered this email address on {{ site_domain }}.
+</p>
+
+<div style="text-align: center;">
+    <a href="{{ activate_url }}" class="button">Verify Email</a>
 </div>
-<br />
-<span style="color: #08b74f"
-  >If the above button isn't working then try copying and pasting the following
-  link into your browser: {{ activate_url }}<span> {% endblock %}</span></span
->
+
+<p style="margin-top: 20px; color: #666666; font-size: 14px;">
+    If the button above doesn't work, copy and paste this link into your browser:<br>
+    <span style="color: #08b74f;">{{ activate_url }}</span>
+</p>
+{% endblock %}
