--- a/templates/account/email/base_message.html
+++ b/templates/account/email/base_message.html
@@ -74,18 +74,10 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://static.redcrypt.ml/logo.svg" alt="Re-Dcrypt Logo" class="logo">
+            <img src="https://pub-bda2b9480df448a79b49097b0c69267d.r2.dev/logo.svg" alt="Re-Dcrypt Logo" class="logo">
         </div>
         <div class="content">
             {% block content %}{% endblock %}
-        </div>
-        <div class="sponsor-section">
-            <h3 class="sponsor-title">Sponsored By</h3>
-            <div class="sponsor-logos">
-                <a href="https://gen.xyz/">
-                    <img src="https://static.redcrypt.ml/sponsors/xyz-logo-white.png" alt="gen.xyz">
-                </a>
-            </div>
         </div>
         <div class="footer">
             © 2025 Re-Dcrypt. All rights reserved.
